[package]
name = "dooT"
version = "0.1.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
dioxus-cli-config = "0.6.3"
rusqlite = { version = "0.34.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.7.9", optional = true }
serde = { version = "1.0.219", features = ["derive"] }

[features]
default = ["server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:axum", "dep:tokio", "dep:rusqlite"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
